get routes, state and form  for ports and watch

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -12,8 +12,9 @@
 .nav-button-wrap {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 3rem;
   padding-right: 2rem;
+  align-items: center;
 }
 
 .nav-bar-buttons {
@@ -46,4 +47,23 @@
 
 .logo-text {
     text-decoration: none;
+}
+
+.dd-hidden {
+  display: none;
+  position: absolute;
+  width: 20rem;
+  height: 20rem;
+  top: 100%;
+  right: 0;
+}
+
+.dd-active:hover .dd-hidden {
+  display: block !important;
+  background-color: blue;
+}
+
+.dd-active {
+  cursor: pointer;
+  position: relative;
 }
