full crud on pt and wl, need transaction feature and news

--- a/frontend/src/components/WatchlistEntries/WatchlistEntries.css
+++ b/frontend/src/components/WatchlistEntries/WatchlistEntries.css
@@ -17,3 +17,14 @@
 .sb-content-item-symbol {
     cursor: pointer;
 }
+
+.sidebar-name-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.edit-link {
+    cursor: pointer;
+    text-decoration: underline;
+}
