css and enter app button

--- a/frontend/src/components/UserPage/UserPage.css
+++ b/frontend/src/components/UserPage/UserPage.css
@@ -4,6 +4,7 @@
     overflow-y: scroll;
     display: flex;
     gap: 1rem;
+    padding: 0 1rem;
 }
 
 .wrapper-userpage-chart-trade {
@@ -44,13 +45,33 @@ article {
 }
 
 .sb-select-with-content-wrapper {
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 35rem;
+    /* gap: 1rem; */
 }
 
 .sb-wl-slct-crud-wrap {
     display: flex;
-    justify-content: space-between;
     width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.sb-select-with-content-wrapper select {
+    width: 60%;
+    text-align: center;
+}
+
+.sb-select-with-content-wrapper select option {
+    padding: 2rem;
+}
+
+.create-crud-btn-wrap {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    align-items: center;
 }
