--- a/frontend/src/components/PortsContainer/PortsContainer.css
+++ b/frontend/src/components/PortsContainer/PortsContainer.css
@@ -11,9 +11,8 @@
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
-    margin-top: 1rem;
-    width: 20rem;
-    margin-left: 1rem;
+    margin-top: 3rem;
+    width: 25rem;
 }
 
 .sb-wl-slct-crud-wrap {
@@ -22,4 +21,5 @@
 
 .sb-ports-wrapper select {
     width: 100%;
+    text-align: center;
 }
