--- a/frontend/src/components/PortEntries/PortEntries.css
+++ b/frontend/src/components/PortEntries/PortEntries.css
@@ -12,6 +12,9 @@
 }
 
 .sb-port-item-wrap {
+    width: 100%;
+    text-align: center;
+    padding-bottom: 2rem;
 }
 
 .sb-prt-data-wrap {
@@ -22,4 +25,8 @@
 
 .sidebar-wrapper {
     margin-top: 1rem;
+    padding-top: 2rem;
+    width: 100% !important;
+    border-radius: 0.5rem;
+    border: 1px solid gray;
 }
