--- a/frontend/src/reset.css
+++ b/frontend/src/reset.css
@@ -151,3 +151,12 @@ body {
 .justify-between {
   justify-content: space-between;
 }
+
+label {
+  font-size: 1.5rem;
+}
+
+input {
+  text-align: center;
+  padding: 0.1rem;
+}
