--- a/frontend/src/components/PortEntries/PortEntries.css
+++ b/frontend/src/components/PortEntries/PortEntries.css
@@ -27,6 +27,6 @@
     margin-top: 1rem;
     padding-top: 2rem;
     width: 100% !important;
-    border-radius: 0.5rem;
-    border: 1px solid gray;
+    /* border-radius: 0.5rem;
+    border: 1px solid gray; */
 }
