--- a/frontend/src/components/WatchlistEntries/WatchlistEntries.css
+++ b/frontend/src/components/WatchlistEntries/WatchlistEntries.css
@@ -3,19 +3,24 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .sb-content-item-name-wrap {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    /* align-items: center;
+    justify-content: center; */
     gap: 2rem;
     padding: 1rem;
 }
 
 .sb-content-item-symbol {
     cursor: pointer;
+    border: none;
+    /* padding: 0.3rem 1rem; */
+    background-color: white;
+    color: blue;
 }
 
 .sidebar-name-wrapper {
