--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 #app_container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* max-height: 150vh; */
   width: 100vw;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
