--- a/frontend/src/components/UserPage/UserPage.css
+++ b/frontend/src/components/UserPage/UserPage.css
@@ -50,11 +50,24 @@ article {
 
 .sb-select-with-content-wrapper {
     margin-top: 3rem;
+    margin-bottom: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 35rem;
+    border: 1px solid #D9DADB;
+    border-radius: 0.3rem;
+    height: 61rem;
+    /* height: 61rem; */
+    /* height: 150vh; */
+    overflow: hidden;
+    padding-top: 1.5rem;
+    scrollbar-gutter: stable;
     /* gap: 1rem; */
+}
+
+.sb-select-with-content-wrapper:hover {
+    overflow-y: auto;
 }
 
 .sb-wl-slct-crud-wrap {
@@ -67,6 +80,7 @@ article {
 .sb-select-with-content-wrapper select {
     width: 60%;
     text-align: center;
+    margin-top: 1rem;
 }
 
 .sb-select-with-content-wrapper select option {
