--- a/frontend/src/components/TradeCard/TradeCard.css
+++ b/frontend/src/components/TradeCard/TradeCard.css
@@ -1,92 +1,143 @@
 .wrapper-trade-card {
-    border: 1px solid #D9DADB;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem 0;
-    width: 30rem !important;
-    border-radius: 0.3rem;
+  border: 1px solid #d9dadb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+  width: 30rem !important;
+  border-radius: 0.3rem;
 }
 
 .wrapper-buy-sell-trade-card {
-    display: flex;
-    justify-content: space-around;
-    border-top: 1px solid #D9DADB;
-    width: 100%;
-    font-size: 2.8rem;
-    margin-top: 4rem;
-    padding-bottom: 2rem;
+  display: flex;
+  justify-content: space-around;
+  border-top: 1px solid #d9dadb;
+  width: 100%;
+  font-size: 2.8rem;
+  margin-top: 4rem;
+  padding-bottom: 2rem;
 }
 
 .wrapper-amount-trade-card {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .wrapper-trade-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding: 2rem;
-    gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 2rem;
+  gap: 0.5rem;
 }
 
 .wrapper-trade-form input {
-    width: 6rem;
+  width: 6rem;
 }
 
 .wrapper-trade-form select {
-    width: 100%;
+  width: 100%;
 }
 
 .tradecard-add-to-wl-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  padding-top: 3rem;
 }
 
 .btn-getstockdata {
-    margin-top: 3rem;
+  margin-top: 3rem;
+  border: none;
+  padding: 0.3rem 1.5rem;
+  border-radius: 1rem;
+}
+
+.btn-getstockdata:enabled {
+    cursor: pointer;
+}
+
+.btn-getstockdata:hover:enabled {
+    box-shadow: 0 0rem 1rem 0.2rem rgba(34, 34, 34, 0.164);
+  transition-duration: 100ms;
+  color: blue;
+}
+
+.btn-getstockdata:active:enabled {
+    background: #e5e5e5;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+       -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+            box-shadow: inset 0px 0px 5px #c1c1c1;
+     outline: none;
+}
+
+.btn-add-to-wl-notval {
+    margin: 1rem;
+    color: #436ef044;
+    border: none;
+    background-color: white;
+    /* cursor: none; */
+}
+
+.btn-submit-order {
+    margin: 1rem;
+    border: none;
+  padding: 0.3rem 1.5rem;
+  border-radius: 1rem;
+}
+
+.btn-submit-order:hover:enabled {
+    box-shadow: 0 0rem 1rem 0.2rem rgba(34, 34, 34, 0.164);
+  transition-duration: 100ms;
+  color: blue;
+  cursor: pointer;
+}
+
+.btn-submit-order:active:enabled {
+    background: #e5e5e5;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+       -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+            box-shadow: inset 0px 0px 5px #c1c1c1;
+     outline: none;
 }
 
 .btn-buy-active {
-    background-color: #89E289;
-    width: 100%;
-    text-align: center;
-    padding: 1.5rem;
-    cursor: pointer;
+  background-color: #89e289;
+  width: 100%;
+  text-align: center;
+  padding: 1.5rem;
+  cursor: pointer;
 }
 
 .btn-sell-active {
-    background-color: #F26D70;
-    width: 100%;
-    text-align: center;
-    padding: 1.5rem;
-    cursor: pointer;
+  background-color: #f26d70;
+  width: 100%;
+  text-align: center;
+  padding: 1.5rem;
+  cursor: pointer;
 }
 
 .btn-sell-passive {
-    width: 100%;
-    text-align: center;
-    padding: 1.5rem;
-    cursor: pointer;
+  width: 100%;
+  text-align: center;
+  padding: 1.5rem;
+  cursor: pointer;
 }
 
 .btn-buy-passive {
-    width: 100%;
-    text-align: center;
-    padding: 1.5rem;
-    cursor: pointer;
+  width: 100%;
+  text-align: center;
+  padding: 1.5rem;
+  cursor: pointer;
 }
 
 .tradecard-add-to-wl-form input {
-    text-align: center;
-    width: 10rem !important;
-    padding: 0.3rem;
+  text-align: center;
+  width: 10rem !important;
+  padding: 0.3rem;
 }
