--- a/frontend/src/components/AuthModal/AuthModal.css
+++ b/frontend/src/components/AuthModal/AuthModal.css
@@ -66,7 +66,9 @@
 }
 
 .auth-modal-wrapper form ul {
+    text-align: center;
     list-style: none !important;
+    color: red;
 }
 
 .btn-auth-toggle {
