finished styling options data, touched up ports

--- a/frontend/src/components/AuthModal/AuthModal.css
+++ b/frontend/src/components/AuthModal/AuthModal.css
@@ -68,6 +68,7 @@
 .auth-modal-wrapper form ul {
     text-align: center;
     list-style: none !important;
+    font-size: 1.5rem;
     color: red;
 }
 
