--- a/frontend/src/components/UserPage/UserPage.css
+++ b/frontend/src/components/UserPage/UserPage.css
@@ -1,7 +1,7 @@
 
 
 .userpage-container {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     display: flex;
     gap: 1rem;
     padding: 0 1rem;
