--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   /* max-height: 150vh; */
-  width: 100vw;
+  width: 100%;
   /* overflow-y: hidden; */
+  overflow-x: hidden;
 }
