--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -51,7 +51,7 @@
   width: 40%;
   text-align: center;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  /* z-index: 2; */
   width: 57%;
   align-items: center;
   justify-content: center;
