--- a/frontend/src/components/PortCrud/PortCrud.css
+++ b/frontend/src/components/PortCrud/PortCrud.css
@@ -1,7 +1,7 @@
 .sb-port-crud-wrapper {
     display: flex;
     flex-direction: column;
-    min-width: 100%;
+    width: 100%;
     padding: 0.5rem 0.5rem;
     gap: 0.5rem;
 }
