--- a/frontend/src/components/PortCrud/PortCrud.css
+++ b/frontend/src/components/PortCrud/PortCrud.css
@@ -26,5 +26,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem;
+    margin-top: 0.5rem;
+    width: 100%;
 }
