--- a/frontend/src/components/TradeCard/TradeCard.css
+++ b/frontend/src/components/TradeCard/TradeCard.css
@@ -32,7 +32,7 @@
   align-items: center;
   width: 100%;
   padding: 2rem;
-  gap: 0.5rem;
+  gap: 1.2rem;
 }
 
 .wrapper-trade-form input {
@@ -140,4 +140,9 @@
   text-align: center;
   width: 10rem !important;
   padding: 0.3rem;
+}
+
+.est-price {
+  font-size: 1.5rem;
+  margin-top: 1rem;
 }
