--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -42,24 +42,17 @@
 }
 
 .home-text-overlay {
-  top: 43.4%;
-  left: 80%;
   display: flex;
   flex-direction: column;
-  position: absolute;
   color: white;
-  width: 40%;
   text-align: center;
-  transform: translate(-50%, -50%);
-  /* z-index: 2; */
+  transform: translate(80%, -100.3%);
   width: 57%;
   align-items: center;
   justify-content: center;
-  height: 80vh;
-  /* background: rgba(0, 0, 0, 0.781); */
-  /* box-shadow: 0px 0px 8rem 50px rgb(0, 0, 0); */
   background: linear-gradient(0.25turn, #00162827, #001628, #001628, #021422);
   overflow: hidden;
+  height: 100%;
 }
 
 .home-text-overlay p {
