--- a/frontend/src/components/UserPage/UserPage.css
+++ b/frontend/src/components/UserPage/UserPage.css
@@ -21,7 +21,7 @@
 .userpage-chart-trade-card {
     display: flex;
     gap: 1rem;
-    height: fit-content;
+    height: 100%;
     padding-top: 3rem;
     justify-content: space-between;
     width: 100%;
@@ -52,6 +52,7 @@ article {
 .tradingview-chart-container {
     /* padding-left: 50rem; */
     /* width: 200rem !important; */
+    height: 64rem;
     width: 100%;
 }
 /*
@@ -66,10 +67,10 @@ article {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 35rem;
+    width: 25%;
     border: 1px solid #D9DADB;
     border-radius: 0.3rem;
-    height: 61rem;
+    height: 64rem;
     /* height: 61rem; */
     /* height: 150vh; */
     overflow: hidden;
